--- a/paper/supplementary.Rnw
+++ b/paper/supplementary.Rnw
@@ -179,7 +179,7 @@ levels(users$age) <- c("18-25", "26-30", "31-35", "36-40", "41-45", "46-50", "51
 ggplot(data=users, aes(x=age, fill=academic_study)) + geom_bar() + facet_wrap(~gender) +
   scale_fill_manual(name = element_blank(), values=c("#550000", "#883388", "#1133FF", "#FF9933", "#555555")) + labs(x="Age", y=element_blank()) + theme(axis.text.x = element_text(angle = 270))
 @
-\caption{Age and education by gender. Younger age brackets and males are over-represented in the sample, but these factors caused no significant impact on results.}
+\caption{Age and education by gender. Younger age brackets, males and people with college education are over-represented in the sample, but these factors caused no significant impact on results.}
 \label{ageed}
 \end{figure}
 
@@ -192,22 +192,22 @@ Subjects are allowed to make multiple selections on each lineup evaluation, with
 {score}_{ij} =\frac{m-s_{ij}}{m-1} \mathbbm{I}_{ij}
 \end{equation}
 
-Where $m = 20$, the number of plots in a linup, $s_{ij}$ is the number of selections made by subject $i$ on lineup $j$ and $\mathbbm{I}_{ij} = 1$ if the true plot is detected, $0$ otherwise. The most selections made on any lineup evaluation is 8. No subject demographic had an increased rate of making multiple selections.
+Where $m = 20$, the number of plots in a linup, $s_{ij}$ is the number of selections made by subject $i$ on lineup $j$ and $\mathbbm{I}_{ij} = 1$ if the true plot is detected, $0$ otherwise.
 
 \begin{figure}[htbp]
 \centering 
 <<avscore, dependson='setup', echo=FALSE, results='asis', message=FALSE, error=FALSE, warning=FALSE, fig.height=4>>= 
 subjplot <- summarise(group_by(full.sub, subj_id), eval=sum(weights), total = sum(score))
 subjplot <- mutate(subjplot, avscore= total/eval)
-ggplot(data=subjplot, aes(x=avscore)) + geom_histogram(binwidth=0.1)
+ggplot(data=subjplot, aes(x=avscore)) + geom_histogram(binwidth=0.1) + labs(y=NULL, x="Average Score")
 @
-\caption{The average score of our subjects, according to formula \ref{score}. There is a wide range of visual ability to be controlled with random effects in the modelling}
+\caption{The average score of our subjects, according to formula \ref{score}. There is a wide range of differing visual abilities to be controlled with random effects in the modelling}
 \label{avscore}
 \end{figure}
 
 
 
-\section{Evaluation Descriptive Statistics}
+\section{Lineup Evaluation Descriptive Statistics}
 
 \begin{figure}[h]
 \centering
@@ -219,9 +219,9 @@ choice$correct <- factor(choice$correct, labels=c("Did not detect", "Detected"))
 choice$choice_reason <- factor(choice$choice_reason)
 levels(choice$choice_reason) <- c("Close Together", "Matching Peaks", "Pattern Formed", "Formed a line", "Other")
 ggplot(data=choice, aes(x=choice_reason, fill=correct)) + geom_bar() + facet_grid(design~rsgn) +
-  theme(legend.position="bottom", axis.title=element_blank()) + scale_fill_discrete(name="True Plot")
+  theme(legend.position="bottom", axis.title=element_blank(), axis.text.x = element_text(angle = 270)) + scale_fill_discrete(name="True Plot")
 @
-\caption{Reasons given for plot selection. After controlling for lineup factors, there is no explanatory power.}
+\caption{Reasons given for plot selection. After controlling for lineup factors, these have no explanatory power.}
 \label{reasons}
 \end{figure}
 
@@ -233,7 +233,7 @@ We originally hypothesised that factor combinations with a low power are most li
 m.select <- summarise(group_by(subset(full.sub, attempts>1), subj_id, pic_id), attempts=max(attempts))
 m.freq <- data.frame(table(m.select$pic_id))
 m.lineup <- merge(m.freq, bylineup, by.x="Var1", by.y="pic_id")
-ggplot(data=m.lineup) + geom_bar(aes(x=factor(r), fill=design)) + facet_grid(n~smoothed) + labs(y="Count", x="True plot correlation")
+ggplot(data=m.lineup) + geom_bar(aes(x=factor(r), fill=design)) + facet_grid(n~smoothed) + labs(y=NULL, x="True plot correlation")
 @
 \caption{Characteristics of lineups with at least one subject making multiple selections. Overlaid line graph lineups have subjects make multiple selections more often, but true plot correlation does not appear to have an impact except at large sample sizes.}
 \label{lineupmulti}
